@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-14
+2016-11-18 Mikhail S. Dubrovin
+- DCMethods - add *_file(...,fname,...) for all procedures
+	
 Tag: V00-03-13
 2016-11-18 Mikhail S. Dubrovin
 - dcs - add/get DCS geometry constants from/to the text file
